--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: black;
+  color: white;
+  font-size: 2.7rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .main {
