--- a/components/authenticate/styles/Videofeed.module.css
+++ b/components/authenticate/styles/Videofeed.module.css
@@ -1,12 +1,18 @@
+.background {
+  vertical-align: top;
+  background: url("https://images.unsplash.com/photo-1520034475321-cbe63696469a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  /* 'https://csshint.com/wp-content/uploads/2020/01/CSS-Animated-Backgrounds-2.gif' */
+  color:white;
+  animation: animation 100s linear infinite;
+
+}
+
 .mainmargin {
-    margin-left:7%;
-    margin-top:7%; 
-    background: url("https://images.unsplash.com/photo-1465146633011-14f8e0781093?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80");
-    /* 'https://csshint.com/wp-content/uploads/2020/01/CSS-Animated-Backgrounds-2.gif' */
-    color:white;
-    animation: animation 100s linear infinite;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  }
+  margin-left:7%;
+  margin-top:7%; 
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
   @keyframes animation {
     100%{
      background-position:0px -3000px;
